# CV

./: .gitignore  Makefile  PLAN.md  README.md  cabal.project  cv-builder.cabal  cv.tex  data.json  generate.py  generate.sh  index.html  main.tex  profile.json
.github/workflows/: build.yml
app/: Main.hs
data/: profile.json  profile.yaml
sections/: awards.tex.mustache  certifications.tex.mustache  education.tex.mustache  experience.tex.mustache  header.tex  header.tex.mustache  publications.tex.mustache  summary.tex.mustache  volunteering.tex.mustache
src/: generate.py  template.tex.j2
template/: cv.tex.j2
