cabal-version: 2.4
name:          cv-builder
version:       0.1.0.0
synopsis:      Populate LaTeX CV templates from a YAML profile
description:   Reads data/profile.yaml and renders Mustache templates in sections/
license:       MIT
author:        Juan Sebastian Urrea Lopez
maintainer:    jurrea5518@gmail.com
category:      Text
build-type:    Simple

executable cv-builder
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2
  build-depends:
      base        >= 4.14 && < 5
    , aeson       >= 2.0
    , yaml        >= 0.11
    , mustache    >= 2.4
    , text        >= 1.2
    , vector      >= 0.12
    , unordered-containers >= 0.2
  default-language: Haskell2010
